<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.telvo.telvoterminaladmin.admin.RequestDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/userImageView"
                android:layout_width="136dp"
                android:layout_height="136dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_home_user_photo" />

            <LinearLayout
                android:layout_marginTop="@dimen/margin_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="480dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="@dimen/text_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/margin_8"
                        android:paddingRight="@dimen/margin_24"
                        android:text=":" />

                    <TextView
                        android:id="@+id/userNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/abdur_rahim"
                        android:textSize="@dimen/text_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="480dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textSize="@dimen/text_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/margin_8"
                        android:paddingRight="@dimen/margin_24"
                        android:text=":" />

                    <TextView
                        android:id="@+id/userMobileTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/sample_mobile_number"
                        android:textSize="@dimen/text_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="480dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/area"
                        android:textSize="@dimen/text_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/margin_8"
                        android:paddingRight="@dimen/margin_24"
                        android:text=":" />

                    <TextView
                        android:id="@+id/userAreaTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/sample_location"
                        android:textSize="@dimen/text_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="480dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="@dimen/text_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/margin_8"
                        android:paddingRight="@dimen/margin_24"
                        android:text=":" />

                    <TextView
                        android:id="@+id/userAddressTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/sample_address"
                        android:textSize="@dimen/text_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="480dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textSize="@dimen/text_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/margin_8"
                        android:paddingRight="@dimen/margin_24"
                        android:text=":" />

                    <TextView
                        android:id="@+id/amountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="500"
                        android:textSize="@dimen/text_24" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_24" />

                <View
                    android:background="@android:color/transparent"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/printButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_button"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/print"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_24" />

                <View
                    android:background="@android:color/transparent"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/verifyButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_button"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_24" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
