<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context="com.telvo.telvoterminaladmin.admin.history.AdminHomeRequestHistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_border_red"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="@dimen/padding_5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_16" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorHistorySeparator" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/amount"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_16" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorHistorySeparator" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mobile_number"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/homeRequestHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
